Made Design Changes as per client's request
Changes containers background color to white, edited text as per client's request.

--- a/css/custom.css
+++ b/css/custom.css
@@ -107,7 +107,7 @@ li.nav-tab a:active{
   border-bottom:3px solid #457ABF
 }
 .container-section-body{
-	background-color:#E6E6E6;
+	background-color:#FFFFFF;
 	padding-bottom:15px;
 	font-weight:800;
 	margin-bottom:30px;
